--- a/day-1/test.ipynb
+++ b/day-1/test.ipynb
@@ -95,6 +95,39 @@
     "import builtins\n",
     "print(dir(builtins))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b5f4d133",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carbon Footprint: 20, City: Bangalore\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "carbon_footprint = 20\n",
+    "city = \"Bangalore\"\n",
+    "print(f\"Carbon Footprint: {carbon_footprint}, City: {city}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d846c22d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#take input from user\n",
+    "name = input(\"Enter your name: \")\n",
+    "print(f\"Hello, {name}!\")"
+   ]
   }
  ],
  "metadata": {
