--- a/day-1/test.ipynb
+++ b/day-1/test.ipynb
@@ -128,6 +128,135 @@
     "name = input(\"Enter your name: \")\n",
     "print(f\"Hello, {name}!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "960696cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables: , , , , \n",
+      "Types: <class 'str'>, <class 'str'>, <class 'str'>, <class 'str'>, <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Enter first variable: \")\n",
+    "b = input(\"Enter second variable: \")\n",
+    "c = input(\"Enter third variable: \")\n",
+    "d = input(\"Enter fourth variable: \")\n",
+    "e = input(\"Enter fifth variable: \")\n",
+    "print(f\"Variables: {a}, {b}, {c}, {d}, {e}\")\n",
+    "print(f\"Types: {type(a)}, {type(b)}, {type(c)}, {type(d)}, {type(e)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "79dc64d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nagpur maharashtra\n",
+      "nagpur nagpur nagpur \n",
+      "n\n",
+      "agp\n",
+      "NAGPUR\n"
+     ]
+    }
+   ],
+   "source": [
+    "city = \"nagpur\"\n",
+    "state = \"maharashtra\"\n",
+    "#string operations\n",
+    "print(city + \" \" + state)  # Concatenation\n",
+    "print((city + \" \") * 3)  # Repetition\n",
+    "print(city[0])  # Indexing\n",
+    "print(city[1:4])  # Slicing\n",
+    "print(city.upper())  # Uppercase\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df7bfa5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4 cities in list\n",
+    "cities = [\"Bangalore\", \"Mumbai\", \"Delhi\", \"Chennai\"]\n",
+    "#list operations\n",
+    "print(cities)  \n",
+    "print(cities[0]) \n",
+    "print(cities[1:3])  \n",
+    "cities.append(\"Kolkata\")\n",
+    "print(cities)  \n",
+    "cities.remove(\"Delhi\")\n",
+    "print(cities)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6391d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tuple\n",
+    "cities_tuple = (\"Bangalore\", \"Mumbai\", \"Delhi\", \"Chennai\")\n",
+    "#tuple operations\n",
+    "print(cities_tuple)\n",
+    "print(cities_tuple[0])\n",
+    "print(cities_tuple[1:3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6a5ef085",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bangalore': 'Karnataka', 'Mumbai': 'Maharashtra', 'Delhi': 'Delhi', 'Chennai': 'Tamil Nadu'}\n",
+      "Karnataka\n",
+      "dict_keys(['Bangalore', 'Mumbai', 'Delhi', 'Chennai'])\n",
+      "dict_values(['Karnataka', 'Maharashtra', 'Delhi', 'Tamil Nadu'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dictionary\n",
+    "cities_dict = {\n",
+    "    \"Bangalore\": \"Karnataka\",\n",
+    "    \"Mumbai\": \"Maharashtra\",\n",
+    "    \"Delhi\": \"Delhi\",\n",
+    "    \"Chennai\": \"Tamil Nadu\"\n",
+    "}\n",
+    "#dictionary operations\n",
+    "print(cities_dict)\n",
+    "print(cities_dict[\"Bangalore\"])  # Accessing value by key\n",
+    "print(cities_dict.keys())  # Getting all keys\n",
+    "print(cities_dict.values())  # Getting all values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c5f2563",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
