--- a/day-1/test.ipynb
+++ b/day-1/test.ipynb
@@ -252,11 +252,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "061c1de5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#division and floor division\n",
+    "a = 10\n",
+    "b= 3\n",
+    "print(a/b)\n",
+    "print(a//b)  # Floor division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c4382241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#membership operators\n",
+    "list1 = [1, 2, 3, 4, 5]\n",
+    "print(3 in list1) \n",
+    "print(6 not in list1)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "6c5f2563",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#input in integer\n",
+    "num = int(input(\"Enter an integer: \"))\n",
+    "num1 = float(input(\"Enter a float: \"))\n",
+    "\n",
+    "print(num)\n",
+    "print(num1)"
+   ]
   }
  ],
  "metadata": {
