--- a/day-2/test.ipynb
+++ b/day-2/test.ipynb
@@ -70,6 +70,53 @@
     "    gross_payment = hours * rate\n",
     "print(f\"Gross payment is: {gross_payment}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6f3b424d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 7 10 13 16 19 22 25 28 31 34 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (4,35, 3):\n",
+    "    print(i, end=\" \")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "01bb7302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total is: 4900\n",
+      "700.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "[400, 500, 600, 700, 800, 900, 1000]\n",
+    "total = 0\n",
+    "count = 0\n",
+    "for i in [400, 500, 600, 700, 800, 900, 1000]:\n",
+    "    total += i\n",
+    "    count += 1\n",
+    "print(f\"Total is: {total}\")\n",
+    "\n",
+    "print(total /count)"
+   ]
   }
  ],
  "metadata": {
