--- a/day-2/test.ipynb
+++ b/day-2/test.ipynb
@@ -117,6 +117,183 @@
     "\n",
     "print(total /count)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af92dca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while (count <10):\n",
+    "    print(count, end=\" \")\n",
+    "    count += 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2432167d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered: asdsad\n",
+      "You entered: wqdqwd\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = \"\"\n",
+    "while user_input.lower() != 'quit':\n",
+    "    user_input = input(\"Enter something (type 'quit' to exit): \")\n",
+    "    if user_input.lower() != 'quit':\n",
+    "        print(f\"You entered: {user_input}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec2c674",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello atharva\n"
+     ]
+    }
+   ],
+   "source": [
+    "#functions\n",
+    "def greet(name):\n",
+    "    print(f\"Hello {name}\")\n",
+    "\n",
+    "greet(\"Atharva\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "47a722bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gross payment is: 540\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pay_computation(hours, rate):\n",
+    "    if hours > 40:\n",
+    "        extra_hours = hours - 40\n",
+    "        gross_payment = (40 * rate) + (extra_hours * 1.5 * rate)\n",
+    "    else:\n",
+    "        gross_payment = hours * rate\n",
+    "    print(f\"Gross payment is: {gross_payment}\")\n",
+    "\n",
+    "pay_computation(12,45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd671bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet (*arr):\n",
+    "    for name in arr:\n",
+    "        print(f\"Hello {name}\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e7f1faf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#addition of variable number of arguments\n",
+    "def add(*args):\n",
+    "    total = 0\n",
+    "    for num in args:\n",
+    "        total += num\n",
+    "    return total\n",
+    " \n",
+    "print(add(1, 2, 3, 4, 5))  # Output: 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "75848f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "add = lambda x,y : x+y\n",
+    "print(add(5, 10))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "174a9366",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "momentum = lambda mass, velocity: mass * velocity\n",
+    "print(momentum(10, 5))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92e2f2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
