--- a/day3/day_3.ipynb
+++ b/day3/day_3.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "cba7a2c1",
    "metadata": {},
    "outputs": [
@@ -101,11 +101,107 @@
     "print(f\"Building Name: {A.building_name}\")\n",
     "print(f\"Emission Factor: {A.emission_fac} kg CO2/kWh\")\n",
     "print(f\"Energy Consumption: {A.energy_consumption} kWh\")\n",
-    "print(f\"Carbon Footprint: {A.calculate_carbon_footprint()} kg CO2\")\n",
+    "print(f\"Carbon Footprint: {A.calculate_carbon_footprint()} kg CO2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "11b73a40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SolarSystems(EnergySystems):\n",
+    "    def __init__(self, building_name, emission_fac, energy_consumption, solar_prod):\n",
+    "        super().__init__(building_name, emission_fac, energy_consumption)\n",
+    "        self.solar_prod = solar_prod\n",
+    "\n",
+    "    def net_energy_consumption(self):\n",
+    "        return self.energy_consumption - self.solar_prod\n",
+    "\n",
+    "solar_building = SolarSystems(\"CSE\", 0.20, 3000, 1000)\n",
+    "print(solar_building.net_energy_consumption())\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1bb47269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is the plastic recyclable? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Waste:\n",
+    "    def __init__(self, weight_kg, category):\n",
+    "        self.weight_kg = weight_kg\n",
+    "        self.category = category\n",
+    "\n",
+    "class PlasticWaste(Waste):\n",
+    "    \n",
+    "    recyclable_types = ['PET', 'HDPE', 'PVC', 'LDPE', 'PP', 'PS']\n",
+    "\n",
+    "    def __init__(self, weight_kg, category, type_of_plastic):\n",
+    "        super().__init__(weight_kg, category)\n",
+    "        self.type_of_plastic = type_of_plastic\n",
+    "\n",
+    "    def is_recyclable(self):\n",
+    "        return self.type_of_plastic in PlasticWaste.recyclable_types\n",
     "\n",
     "\n",
+    "plastic = PlasticWaste(2.5, 'recyclable', 'PET')\n",
+    "print(f\"Is the plastic recyclable? {plastic.is_recyclable()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "72f8b8f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average usage: 140.71428571428572 L/day\n",
+      "Exceeds sustainable limit? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class WaterUsageMonitor:\n",
+    "    def __init__(self, daily_usage):\n",
+    "        self.daily_usage = daily_usage  \n",
     "\n",
-    "        "
+    "    def average_usage(self):\n",
+    "        return sum(self.daily_usage) / len(self.daily_usage)\n",
+    "\n",
+    "    def exceeds_limit(self, limit=150):\n",
+    "        \n",
+    "        return any(usage > limit for usage in self.daily_usage)\n",
+    "\n",
+    "# Example usage\n",
+    "usage = [120, 140, 135, 160, 155, 130, 145]\n",
+    "monitor = WaterUsageMonitor(usage)\n",
+    "print(f\"Average usage: {monitor.average_usage()} L/day\")\n",
+    "print(f\"Exceeds sustainable limit? {monitor.exceeds_limit()}\")"
    ]
   }
  ],
