--- a/day3/lib.ipynb
+++ b/day3/lib.ipynb
@@ -103,6 +103,49 @@
     "flattened_temperatures = temperatures_array.flatten()\n",
     "print(\"Flattened temperatures array:\", flattened_temperatures)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5108660c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: [11 22 33 44]\n",
+      "Subtraction: [ -9 -18 -27 -36]\n",
+      "Multiplication: [ 10  40  90 160]\n",
+      "Division: [0.1 0.1 0.1 0.1]\n",
+      "Power (a squared): [ 1  4  9 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3, 4])\n",
+    "b = np.array([10, 20, 30, 40])\n",
+    "\n",
+    "# Addition\n",
+    "add_result = np.add(a, b)\n",
+    "print(\"Addition:\", add_result)\n",
+    "\n",
+    "# Subtraction\n",
+    "sub_result = np.subtract(a, b)\n",
+    "print(\"Subtraction:\", sub_result)\n",
+    "\n",
+    "# Multiplication\n",
+    "mul_result = np.multiply(a, b)\n",
+    "print(\"Multiplication:\", mul_result)\n",
+    "\n",
+    "# Division\n",
+    "div_result = np.divide(a, b)\n",
+    "print(\"Division:\", div_result)\n",
+    "\n",
+    "# Power\n",
+    "pow_result = np.power(a, 2)\n",
+    "print(\"Power (a squared):\", pow_result)"
+   ]
   }
  ],
  "metadata": {
