--- a/day3/lib.ipynb
+++ b/day3/lib.ipynb
@@ -261,6 +261,165 @@
     "\n",
     "np.linspace(0, 1, 5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "902f1de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 5.5\n",
+      "Median: 5.5\n",
+      "Standard Deviation: 2.8722813232690143\n",
+      "Variance: 8.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean\n",
+    "data = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "mean_value = np.mean(data)\n",
+    "print(\"Mean:\", mean_value)\n",
+    "\n",
+    "# Median\n",
+    "median_value = np.median(data)\n",
+    "print(\"Median:\", median_value)\n",
+    "\n",
+    "# Standard Deviation\n",
+    "std_value = np.std(data)\n",
+    "print(\"Standard Deviation:\", std_value)\n",
+    "\n",
+    "# Variance\n",
+    "var_value = np.var(data)\n",
+    "print(\"Variance:\", var_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "465d749b",
+   "metadata": {},
+   "source": [
+    "Problem Statement:\n",
+    "Consider the following arrays:\n",
+    "\n",
+    "1. Arrays for Arithmetic Operations:\n",
+    "\n",
+    "Array A: [15, 25, 35, 45, 55]\n",
+    "Array B: [5, 10, 15, 20, 25]\n",
+    "Array for Statistical Operations:\n",
+    "\n",
+    "Array C: [12, 22, 32, 42, 52, 62, 72, 82, 92, 102]\n",
+    "Arrays for String Functions:\n",
+    "\n",
+    "String Array X: ['Hello', 'Data', 'Science', 'Class', 'Learners']\n",
+    "String Array Y: ['World', 'Analysis', 'is', 'Fun', '2023']\n",
+    "Steps to Perform:\n",
+    "\n",
+    "Perform element-wise addition, subtraction, multiplication, division, and power operations on Arrays A and B\n",
+    "Calculate the median, mean, standard deviation, and variance for Array C\n",
+    "Concatenate corresponding elements of String Arrays X and Y\n",
+    "Convert all elements in String Array X to uppercase\n",
+    "Replace a specific substring in String Array Y with another substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "32cd286b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition of A and B: [20 35 50 65 80]\n",
+      "Subtraction of A and B: [10 15 20 25 30]\n",
+      "Multiplication of A and B: [  75  250  525  900 1375]\n",
+      "Division of A and B: [3.         2.5        2.33333333 2.25       2.2       ]\n",
+      "Power of A (A squared): [ 225  625 1225 2025 3025]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([15, 25, 35, 45, 55])\n",
+    "B = np.array([5, 10, 15, 20, 25])\n",
+    "\n",
+    "add_AB = np.add(A, B)\n",
+    "print(\"Addition of A and B:\", add_AB)\n",
+    "\n",
+    "sub_AB = np.subtract(A, B)\n",
+    "print(\"Subtraction of A and B:\", sub_AB)\n",
+    "\n",
+    "mul_AB = np.multiply(A, B)\n",
+    "print(\"Multiplication of A and B:\", mul_AB)\n",
+    "\n",
+    "div_AB = np.divide(A, B)\n",
+    "print(\"Division of A and B:\", div_AB)\n",
+    "\n",
+    "pow_AB = np.power(A, 2)\n",
+    "print(\"Power of A (A squared):\", pow_AB)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb909cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = np.array([12, 22, 32, 42, 52, 62, 72, 82, 92, 102])\n",
+    "\n",
+    "mean_c = np.mean(C)\n",
+    "print(\"Mean of C:\", mean_c)\n",
+    "\n",
+    "median_c = np.median(C)\n",
+    "print(\"Median of C:\", median_c)\n",
+    "\n",
+    "std_c = np.std(C)\n",
+    "print(\"Standard Deviation of C:\", std_c)\n",
+    "\n",
+    "var_c = np.var(C)\n",
+    "print(\"Variance of C:\", var_c)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8e69ca58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated Strings: ['Hello World' 'Data Analysis' 'Science is' 'Class Fun' 'Learners 2023']\n",
+      "Uppercase X: ['HELLO' 'DATA' 'SCIENCE' 'CLASS' 'LEARNERS']\n",
+      "Replaced Y: ['World' 'Analysare' 'are' 'Fun' '2023']\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array(['Hello', 'Data', 'Science', 'Class', 'Learners'])\n",
+    "Y = np.array(['World', 'Analysis', 'is', 'Fun', '2023'])\n",
+    "\n",
+    "# Concatenate corresponding elements of String Arrays X and Y with a space\n",
+    "concatenated_strings = np.char.add(X, np.char.add(' ', Y))\n",
+    "print(\"Concatenated Strings:\", concatenated_strings)\n",
+    "\n",
+    "# Convert all strings in X to uppercase\n",
+    "uppercase_X = np.char.upper(X)\n",
+    "print(\"Uppercase X:\", uppercase_X)\n",
+    "\n",
+    "# Replace a specific substring in String Array Y with another substring\n",
+    "replaced_Y = np.char.replace(Y, 'is', 'are')\n",
+    "print(\"Replaced Y:\", replaced_Y)"
+   ]
   }
  ],
  "metadata": {
