--- a/day3/lib.ipynb
+++ b/day3/lib.ipynb
@@ -420,6 +420,93 @@
     "replaced_Y = np.char.replace(Y, 'is', 'are')\n",
     "print(\"Replaced Y:\", replaced_Y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f5efb13",
+   "metadata": {},
+   "source": [
+    "Assisted Practice\n",
+    "Problem Statement:\n",
+    "Create a 1D NumPy array with at least 10 elements\n",
+    "Create a 2D NumPy array with a minimum of 3 rows and 4 columns\n",
+    "Create a 3D NumPy array with at least 2 matrices, each containing 2 rows and 3 columns\n",
+    "Accessing Elements in Arrays\n",
+    "Access and print various elements from 1D, 2D, and, 3D using positive indexing\n",
+    "Perform and print some basic arithmetic operations (like addition, subtraction) using elements accessed from 1D, 2D, and, 3D arrays\n",
+    "Access and print elements using negative indices in all three arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08705162",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1D Array: [ 5 10 15 20 25 30 35 40 45 50]\n",
+      "2D Array:\n",
+      " [[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "3D Array:\n",
+      " [[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]]\n",
+      "1D, 3rd element: 15\n",
+      "2D, 2nd row, 3rd column: 7\n",
+      "3D, 2nd matrix, 1st row, 2nd column: 8\n",
+      "Addition of first elements from each array: 7\n",
+      "Subtraction of elements: -7\n",
+      "1D, last element: 50\n",
+      "2D, last row, last column: 12\n",
+      "3D, last matrix, last row, last column: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1D array with at least 10 elements\n",
+    "import numpy as np\n",
+    "arr_1d = np.array([5, 10, 15, 20, 25, 30, 35, 40, 45, 50])\n",
+    "print(\"1D Array:\", arr_1d)\n",
+    "\n",
+    "# 2D array with 3 rows and 4 columns\n",
+    "arr_2d = np.array([\n",
+    "    [1, 2, 3, 4],\n",
+    "    [5, 6, 7, 8],\n",
+    "    [9, 10, 11, 12]\n",
+    "])\n",
+    "print(\"2D Array:\\n\", arr_2d)\n",
+    "\n",
+    "# 3D array: 2 matrices, each 2x3\n",
+    "arr_3d = np.array([\n",
+    "    [[1, 2, 3], [4, 5, 6]],\n",
+    "    [[7, 8, 9], [10, 11, 12]]\n",
+    "])\n",
+    "print(\"3D Array:\\n\", arr_3d)\n",
+    "\n",
+    "# Access\n",
+    "print(\"1D, 3rd element:\", arr_1d[2])\n",
+    "print(\"2D, 2nd row, 3rd column:\", arr_2d[1, 2])\n",
+    "print(\"3D, 2nd matrix, 1st row, 2nd column:\", arr_3d[1, 0, 1])\n",
+    "\n",
+    "# Arithmetic operations\n",
+    "add_result = arr_1d[0] + arr_2d[0, 0] + arr_3d[0, 0, 0]\n",
+    "print(\"Addition of first elements from each array:\", add_result)\n",
+    "\n",
+    "sub_result = arr_1d[1] - arr_2d[1, 1] - arr_3d[1, 1, 1]\n",
+    "print(\"Subtraction of elements:\", sub_result)\n",
+    "\n",
+    "# Accessing elements using negative indexing\n",
+    "print(\"1D, last element:\", arr_1d[-1])\n",
+    "print(\"2D, last row, last column:\", arr_2d[-1, -1])\n",
+    "print(\"3D, last matrix, last row, last column:\", arr_3d[-1, -1, -1])"
+   ]
   }
  ],
  "metadata": {
