--- a/day-4/day_4.ipynb
+++ b/day-4/day_4.ipynb
@@ -230,6 +230,88 @@
     "print(\"Reversed rows in each matrix:\\n\", slice_3d_5)\n",
     "print(\"Reversed columns in each row of each matrix:\\n\", slice_3d_6)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "430d445d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# axis means the dimension along which the operation is performed\n",
+    "# For 1D arrays, axis=0 column and axis = 1 refers to rows.\n",
+    "# For 2D arrays, axis=0 refers to rows and axis=1 refers to columns.\n",
+    "# For 3D arrays, axis=0 refers to the first dimension (matrices), axis=1 refers to rows, and axis=2 refers to columns.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "77659ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Carbon Emissions Data (10 years, 5 cities):\n",
+      " [[1431 3103 2662 4765 1525]\n",
+      " [2024 3595 3148 3406 4231]\n",
+      " [2096 3566 2068 1334 1138]\n",
+      " [2301 2123 1297 1065 1807]\n",
+      " [2909 4952 3837 2114 2202]\n",
+      " [4845 3467 3780 3429 2138]\n",
+      " [3635 4933 3279 1031 4064]\n",
+      " [1658 3413 2307 4484 4493]\n",
+      " [2763 3197 2086 4780 4098]\n",
+      " [4550 1688 1479 1199 3153]]\n",
+      "\n",
+      "Total emissions for each city over 10 years: [28212 34037 25943 27607 28849]\n",
+      "Year with the highest total emissions: 6\n",
+      "Average emissions for all cities in Year 5: 3202.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 1: Analyzing Carbon Emissions Data \n",
+    "# Imagine you have a dataset containing carbon emissions from various cities in a country over a period of time. The data is organized in a NumPy array where each row represents a year, and each column represents a city. \n",
+    "# Task: \n",
+    "# 1. Create a 2D NumPy array that stores carbon emissions (in tons) for 5 cities over 10 years. The data should be random numbers between 1000 and 5000 (use numpy.random.randint). \n",
+    "# 2. Find the total emissions for each city over the 10 years. \n",
+    "# 3. Find the year with the highest total emissions. \n",
+    "# 4. Calculate the average emissions for all cities in a specific year (say, Year 5).\n",
+    "\n",
+    "# Step 1: Create a 2D NumPy array with random emissions data\n",
+    "import numpy as np\n",
+    "emissions_data = np.random.randint(1000, 5000, size=(10, 5))\n",
+    "print(\"\\nCarbon Emissions Data (10 years, 5 cities):\\n\", emissions_data)\n",
+    "# Step 2: Find the total emissions for each city over the 10 years\n",
+    "total_emissions_per_city = emissions_data.sum(axis=0)\n",
+    "print(\"\\nTotal emissions for each city over 10 years:\", total_emissions_per_city)\n",
+    "\n",
+    "# Step 3: Find the year with the highest total emissions\n",
+    "total_emissions_per_year = emissions_data.sum(axis=1)\n",
+    "highest_year_index = np.argmax(total_emissions_per_year)\n",
+    "highest_year = highest_year_index + 1  # Adding 1 to convert index to year (1-based)\n",
+    "print(\"Year with the highest total emissions:\", highest_year)\n",
+    "\n",
+    "# Step 4: Calculate the average emissions for all cities in Year 5\n",
+    "average_emissions_year_5 = emissions_data[4].mean()  # Year 5 is at index 4\n",
+    "print(\"Average emissions for all cities in Year 5:\", average_emissions_year_5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2a443df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
