--- a/day-4/day_4.ipynb
+++ b/day-4/day_4.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "77659ec4",
    "metadata": {},
    "outputs": [
@@ -283,22 +283,22 @@
     "# 3. Find the year with the highest total emissions. \n",
     "# 4. Calculate the average emissions for all cities in a specific year (say, Year 5).\n",
     "\n",
-    "# Step 1: Create a 2D NumPy array with random emissions data\n",
+    "\n",
     "import numpy as np\n",
     "emissions_data = np.random.randint(1000, 5000, size=(10, 5))\n",
     "print(\"\\nCarbon Emissions Data (10 years, 5 cities):\\n\", emissions_data)\n",
-    "# Step 2: Find the total emissions for each city over the 10 years\n",
+    "\n",
     "total_emissions_per_city = emissions_data.sum(axis=0)\n",
     "print(\"\\nTotal emissions for each city over 10 years:\", total_emissions_per_city)\n",
     "\n",
-    "# Step 3: Find the year with the highest total emissions\n",
+    "\n",
     "total_emissions_per_year = emissions_data.sum(axis=1)\n",
     "highest_year_index = np.argmax(total_emissions_per_year)\n",
-    "highest_year = highest_year_index + 1  # Adding 1 to convert index to year (1-based)\n",
+    "highest_year = highest_year_index + 1 \n",
     "print(\"Year with the highest total emissions:\", highest_year)\n",
     "\n",
-    "# Step 4: Calculate the average emissions for all cities in Year 5\n",
-    "average_emissions_year_5 = emissions_data[4].mean()  # Year 5 is at index 4\n",
+    "\n",
+    "average_emissions_year_5 = emissions_data[4].mean()  \n",
     "print(\"Average emissions for all cities in Year 5:\", average_emissions_year_5)\n",
     "\n"
    ]
