--- a/day-4/day_4.ipynb
+++ b/day-4/day_4.ipynb
@@ -305,13 +305,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "e2a443df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Renewable Energy Percentages for the Past 20 Years:\n",
+      " [60 18 54 30 17 42 59 12 42 25 22 20 28 35 58 48 36 24 26 31]\n",
+      "Average Renewable Energy Percentage over 20 Years: 34.35\n",
+      "Percentage of years with renewable energy below 20%: 15.0\n"
+     ]
+    }
+   ],
    "source": [
+    "#create a numpy array to represent renewable energu percentages for the past 20 years between 10% to 60%\n",
+    "renewable_energy_data = np.random.randint(10, 61, size=(20,))\n",
+    "print(\"\\nRenewable Energy Percentages for the Past 20 Years:\\n\", renewable_energy_data)\n",
+    "\n",
+    "# Calculate the average renewable energy percentage over the 20 years\n",
+    "average_renewable_energy = renewable_energy_data.mean()\n",
+    "print(\"Average Renewable Energy Percentage over 20 Years:\", average_renewable_energy)\n",
+    "\n",
+    "renewable_energy_percentage = np.where(renewable_energy_data <20)\n",
+    "# Calculate the percentage of years with renewable energy below 20%\n",
+    "percentage_below_20 = (len(renewable_energy_percentage[0]) / len(renewable_energy_data)) * 100\n",
+    "print(\"Percentage of years with renewable energy below 20%:\", percentage_below_20)\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f61d0315",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Water Usage Data:\n",
+      " [[11668 13655  6887 10571]\n",
+      " [10514 11458 12775 15830]\n",
+      " [17485 12821 19131 13677]\n",
+      " [15056  5024 18856 17283]\n",
+      " [16766 11586 18638 10128]\n",
+      " [13514 10300  7905 18182]\n",
+      " [19229 12972  6652 11775]\n",
+      " [ 8691 10879 17764  7027]\n",
+      " [19574 13283  7701  8061]\n",
+      " [10140 13810 10071 10776]\n",
+      " [10063 15016 17874 11155]\n",
+      " [13983  7127 12940 12173]]\n",
+      "\n",
+      "Total water usage for each field over 12 months: [166683 137931 157194 146638]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a 2d numpy array where each row represents a month and each column represenrts a field. generate random data between 5000 and 20000 liters\n",
+    "water_usage_data = np.random.randint(5000, 20001, size=(12, 4)) \n",
+    "print(\"\\nWater Usage Data:\\n\", water_usage_data)\n",
+    "\n",
+    "# Calculate the total water usage for each field over the 12 months\n",
+    "total_water_usage_per_field = water_usage_data.sum(axis=0)\n",
+    "print(\"\\nTotal water usage for each field over 12 months:\", total_water_usage_per_field)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a49042c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
