--- a/day-4/pandas.ipynb
+++ b/day-4/pandas.ipynb
@@ -1488,6 +1488,40 @@
     "print(\"DataFrame with Day, Month, and Year columns:\")\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bae681e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame with Is_Weekend column:\n",
+      "     Name  Age  Salary       Date  Day  Month  Year  Is_Weekend Day_of_Week\n",
+      "0     Raj   28   28000 2025-01-01    1      1  2025       False   Wednesday\n",
+      "1  Simran   24   22000 2025-02-01    1      2  2025        True    Saturday\n",
+      "2  Sameer   25   18000 2025-03-01    1      3  2025        True    Saturday\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df[\"Is_Weekend\"] = df[\"Day_of_Week\"].isin([\"Saturday\", \"Sunday\"])\n",
+    "df[\"Is_Weekend\"] = df[\"Date\"].dt.dayofweek >= 5\n",
+    "print(\"DataFrame with Is_Weekend column:\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee4b0c44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
