--- a/day-5/matplotlib.ipynb
+++ b/day-5/matplotlib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c0d3580c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7b02856b",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "49    Geothermal                   3139.0           161.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1595c8d9",
    "metadata": {},
    "outputs": [
@@ -436,13 +436,100 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "energy_Data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42a84a7a",
+   "metadata": {},
+   "source": [
+    "PREPROCESSING "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f6b2a0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Energy_Consumption(MWh)  Cost(Million$)\n",
+      "0                  0.414941        0.356667\n",
+      "1                  0.000000        0.066667\n",
+      "2                       NaN        0.800000\n",
+      "3                  0.665680        0.883333\n",
+      "4                  0.673077        0.356667\n",
+      "5                  0.414941             NaN\n",
+      "6                  0.665680        0.356667\n",
+      "7                  0.673077        1.000000\n",
+      "8                  0.876849        0.356667\n",
+      "9                  0.876849             NaN\n",
+      "10                 0.424926        1.000000\n",
+      "11                 0.665680        0.626667\n",
+      "12                 0.876849        0.016667\n",
+      "13                 0.673077        0.016667\n",
+      "14                 0.424926        0.883333\n",
+      "15                 0.673077        0.113333\n",
+      "16                 0.424926        0.626667\n",
+      "17                 0.665680        0.626667\n",
+      "18                 0.414941        0.356667\n",
+      "19                 1.000000        0.016667\n",
+      "20                 0.701923             NaN\n",
+      "21                 0.414941        0.576667\n",
+      "22                 0.955251        0.576667\n",
+      "23                 0.673077        1.000000\n",
+      "24                 0.955251        0.016667\n",
+      "25                 0.414941        0.016667\n",
+      "26                 0.424926        0.883333\n",
+      "27                 0.701923        0.576667\n",
+      "28                 0.701923        0.016667\n",
+      "29                      NaN        0.883333\n",
+      "30                 0.701923        0.356667\n",
+      "31                 1.000000        0.800000\n",
+      "32                 0.701923        0.000000\n",
+      "33                 0.414941        0.626667\n",
+      "34                      NaN        0.113333\n",
+      "35                 0.414941        1.000000\n",
+      "36                 0.414941        0.800000\n",
+      "37                 0.457470        0.576667\n",
+      "38                 0.000000        0.883333\n",
+      "39                      NaN        0.626667\n",
+      "40                 0.414941        0.016667\n",
+      "41                 0.000000        0.113333\n",
+      "42                 0.000000        0.016667\n",
+      "43                      NaN             NaN\n",
+      "44                 0.457470             NaN\n",
+      "45                 0.955251        0.113333\n",
+      "46                 0.424926        0.883333\n",
+      "47                 1.000000        0.113333\n",
+      "48                 0.424926        0.576667\n",
+      "49                 0.701923        0.113333\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import minmax scaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "#initialize the scaler\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "numeric_data = energy_Data.select_dtypes(include=[np.number])\n",
+    "energy_Data_scaled = scaler.fit_transform(numeric_data)\n",
+    "\n",
+    "# Convert the scaled data back to a DataFrame\n",
+    "energy_Data_scaled = pd.DataFrame(energy_Data_scaled, columns=numeric_data.columns)\n",
+    "\n",
+    "print(energy_Data_scaled)\n"
    ]
   }
  ],
