--- a/day-5/seaborn.ipynb
+++ b/day-5/seaborn.ipynb
@@ -279,6 +279,17 @@
     "plt.title(\"Correlation Heatmap of Tips Dataset\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc1bdaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#linear algebra is important\n",
+    " "
+   ]
   }
  ],
  "metadata": {
