--- a/day-5/ML-1.ipynb
+++ b/day-5/ML-1.ipynb
@@ -302,6 +302,37 @@
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cff7cec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([115790.21011287,  71498.27809463, 102596.86866063,  75267.80422384,\n",
+       "        55477.79204548,  60189.69970699])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = lr.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bd062cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
